@@ -1,3 +1,10 @@
+2003-07-02 Aaron Faupell
+	* irc.tcl moved cmd-reload to ::irc::reload. removed
+	unused nick variable.
+	* irc.man added all the recently created
+	commands to the man page.
+
+
 2003-06-30  David N. Welton  <davidw@dedasys.com>
 
 	* irc.tcl (::irc::connection): connection no longer takes
